Cleanup of generated c++ code

BUG:413574
FIXED-IN:2.29.3 (KDE Applications 19.08.3)